Aligned labels left with a fixed with for the new job_opportunity form

--- a/app/assets/stylesheets/modules/job_opportunities.scss
+++ b/app/assets/stylesheets/modules/job_opportunities.scss
@@ -2,3 +2,8 @@ ul.job_opportunity li {
   list-style: none;
   margin-top: 20px;
 }
+
+label {
+  width: 180px;
+  float: left;
+}
